--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="#">Test</a></li>
         <li class="slider"></li>
     </ul>
     </div>
